feat: Se corrigieron errores de pruebas unitarias, se aumento el code coverage. Resolves #395